fix: cards-field jumps on cards animations on narrow screen-sizes

--- a/src/components/cards-field/cards-field.scss
+++ b/src/components/cards-field/cards-field.scss
@@ -3,11 +3,11 @@
   --cards-rows: 6;
 
   max-height: 100%;
-  // overflow-y: hidden;
+  overflow: hidden;
 
   display: grid;
-  grid-template-columns: repeat(var(--cards-columns), 1fr);
-  grid-template-rows: repeat(var(--cards-rows), 1fr);
+  grid-template-columns: repeat(var(--cards-columns), minmax(0, 1fr));
+  grid-template-rows: repeat(var(--cards-rows), minmax(0, 1fr));
   justify-items: center;
   gap: 20px 20px;
 
